# pageforge

./: .env.example  .gitignore  AGENTS.md  CODE_WIKI.md  Dockerfile  FRONTEND_BACKEND_SYNC.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_REACT.md  REACT_PROJECT_CONVERSION.md  REACT_TEMPLATES_IMPLEMENTATION.md  README.md  UPGRADE_PLAN.md  VERIFICATION_CHECKLIST.md  WEB_CONTAINER_BACKEND_IMPLEMENTATION.md  WEB_CONTAINER_IMPLEMENTATION.md  WEB_CONTAINER_QUICK_START.md  demo_react_templates.py  docker-compose.yml  fix_braces.py  test_pipeline.py  test_webcontainer.py
backend/: API_WEB_CONTAINER.md  generate_flowchart.py  nodes_simulation.ipynb  nodes_simulation_run.ipynb  print_custom_graph.py  print_graph_details.py  pyproject.toml  react_example.py  start_simulation.sh  test_webcontainer.py  webcontainer_example.py
backend/.ipynb_checkpoints/: nodes_simulation_run-checkpoint.ipynb
backend/app/: config.py  main.py
backend/app/.ipynb_checkpoints/: main-checkpoint.py
backend/app/agents/: task_analyzer.py  unified_agent.py
backend/app/api/: checkpoints.py  export.py  messages.py  projects.py  sessions.py  templates.py  unified_agent.py  webcontainer.py
backend/app/checkpoint/: __init__.py  langgraph_adapter.py  manager.py  models.py
backend/app/core/: __init__.py  discovery.py  model_router.py  registry.py
backend/app/graph/: edges.py  event_emitter.py  graph.py  graph_v2.py  loader_node.py  nodes.py  nodes_human.py  state.py  tools.py
backend/app/models/: session.py  template.py  version.py
backend/app/prompts/: 00_identity.md  01_intent_router.md  02_thinking.md  03_plan.md  04_code_gen_system.md  04_code_gen_user.md  05_reply.md  06_fallback_styles.md  __init__.py  fallback_styles.json  loader.py
backend/app/skills/: loader.py
backend/docs/: SYSTEM_TOOLS_IMPLEMENTATION_SUMMARY.md  system-tools-README.md  unified_agent_framework.md
backend/examples/: system_tools_demo.py
backend/tests/: test_agent_state.py  test_checkpoint.py  test_human_in_the_loop.py  test_snapshots.py  test_subgraph_state_fields.py
(+185 files in other folders)
