[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.0",
    "graphviz>=0.21",
    "grandalf>=0.8",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "langgraph-cli>=0.4.23",
    "langgraphics>=0.1.0b3",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.0.0",
    "pydot>=4.0.1",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
